# AbstractProgrammingProject

./: CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: cmake.yml
cmake/: Tests.cmake
docs/: README.md  README.pl.md
include/: Base64.hpp  PrimeUtils.hpp  RSASignatureManager.tpp
src/: Base64.cpp
tests/: RSAEncryptionTests.cpp
